Change YOLO architecture
Add 1 yolo layer
Change model stride
Change anchor number

--- a/cfg/yolov3-spp-custom-1cls-4channel.cfg
+++ b/cfg/yolov3-spp-custom-1cls-4channel.cfg
@@ -647,7 +647,7 @@ activation=linear
 
 [yolo]
 mask = 9,10,11
-anchors = 10,13,  16,30,  33,23,  30,61,  62,45,  59,119,  116,90,  156,198,  373,326
+anchors = 13,27, 16,34, 19,42, 22,53, 27,48, 26,64, 33,69, 34,83, 42,98, 49,122, 64,154, 83,208
 classes=1
 num=9
 jitter=.3
@@ -734,7 +734,7 @@ activation=linear
 
 [yolo]
 mask = 6,7,8
-anchors = 10,13,  16,30,  33,23,  30,61,  62,45,  59,119,  116,90,  156,198,  373,326
+anchors = 13,27, 16,34, 19,42, 22,53, 27,48, 26,64, 33,69, 34,83, 42,98, 49,122, 64,154, 83,208
 classes=1
 num=9
 jitter=.3
@@ -822,7 +822,7 @@ activation=linear
 
 [yolo]
 mask = 3,4,5
-anchors = 10,13,  16,30,  33,23,  30,61,  62,45,  59,119,  116,90,  156,198,  373,326
+anchors = 13,27, 16,34, 19,42, 22,53, 27,48, 26,64, 33,69, 34,83, 42,98, 49,122, 64,154, 83,208
 classes=1
 num=9
 jitter=.3
@@ -910,7 +910,7 @@ activation=linear
 
 [yolo]
 mask = 0,1,2
-anchors = 10,13,  16,30,  33,23,  30,61,  62,45,  59,119,  116,90,  156,198,  373,326
+anchors = 13,27, 16,34, 19,42, 22,53, 27,48, 26,64, 33,69, 34,83, 42,98, 49,122, 64,154, 83,208
 classes=1
 num=9
 jitter=.3
